syntax = "proto3";

package auth;

// Auth service definition for login/registration
service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// Request messages
message RegisterRequest {
  string email = 1;
  string password = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string phone = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

// Response messages
message AuthResponse {
  string access_token = 1;
  int32 expires_in = 2;
  AuthUser user = 3;
}

message AuthUser {
  string id = 1;
  string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  optional AuthUser user = 2;
}
